--- a/Pages/Authentication/Register/Concluido.razor
+++ b/Pages/Authentication/Register/Concluido.razor
@@ -8,22 +8,20 @@
             <MudAlert Severity="Severity.Success">Você já está logado como @authContext.User.Identity?.Name.</MudAlert>
         </Authorized>
         <NotAuthorized>
-            <MudOverlay @bind-Visible="@loading" DarkBackground="true" Absolute="false">
-                <modulum.Shared.Loading />
-            </MudOverlay>
-                <MudCard Outlined="true" Class="@($"{GetResponsivePadding()} mx-auto")" Style="max-width: 700px;">
-                    <MudCardContent Class="@GetResponsivePadding()">
+            <MudStack Class="@($"{GetResponsivePadding()} mx-auto")" Style="max-width: 500px;">
+                <!--<MudCard Outlined="true" Class="@($"{GetResponsivePadding()} mx-auto")" Style="max-width: 700px;">
+                    <MudCardContent Class="@GetResponsivePadding()">-->
                         <MudStack AlignItems="AlignItems.Center" Justify="Justify.Center" Spacing="2">
                             <MudIcon Icon="@Icons.Material.Filled.CheckCircle"
                                      Color="Color.Success"
                                      Size="Size.Large"
-                                     Class="mt-6" />
+                                     Class="mt-3" />
                         </MudStack>
                         <MudText Typo="Typo.h4" Align="Align.Center" Class="mt-6">Cadastro finalizado com sucesso!</MudText>
-                    <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Info" Class="mt-6">
+                        <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Info" Class="mt-3">
                             Sua senha foi cadastrada e sua conta está pronta para uso.
                         </MudText>
-                        <MudStack Spacing="1" Class="mt-10">
+                        <MudStack Spacing="1" Class="mt-3">
                             <MudButton Href="/login"
                                        Color="Color.Primary"
                                        Variant="Variant.Filled"
@@ -32,9 +30,10 @@
                                 Acessar
                             </MudButton>
                         </MudStack>
-                    
-                    </MudCardContent>
-                </MudCard>
+
+                <!--</MudCardContent>
+                </MudCard>-->
+            </MudStack>
         </NotAuthorized>
     </AuthorizeView>
 </MudContainer>
