--- a/Pages/Authentication/Register/Email.razor
+++ b/Pages/Authentication/Register/Email.razor
@@ -8,15 +8,16 @@
             <MudAlert Severity="Severity.Success">Você já está logado como @authContext.User.Identity?.Name.</MudAlert>
         </Authorized>
         <NotAuthorized>
-                <MudOverlay @bind-Visible="@loading" DarkBackground="true" Absolute="false">
-                    <modulum.Shared.Loading />
-                </MudOverlay>
                 <EditForm Model="@_registerUserModel" method="post" FormName="Cadastre-se" OnValidSubmit="DoRegisterAsync">
-                    <MudCard Outlined="true" Class="@($"{GetResponsivePadding()} mx-auto")" Style="max-width: 700px;">
-                        <!--<MudImage Src="logo_512x512.png" Alt="Syki" Elevation="25" Class="rounded-lg mx-20 mt-10 mb-5" />-->
-                        <MudCardContent Class="@GetResponsivePadding()">
-                            <MudText Typo="Typo.h4" Align="Align.Center" Class="mb-1">Criar uma conta</MudText>
-                            <MudText Typo="Typo.subtitle2" Align="Align.Center" Color="Color.Secondary" Class="mb-4">
+                    <MudStack Class="@($"{GetResponsivePadding()} mx-auto")" Style="max-width: 500px;">
+                <!--<MudCard Outlined="true" Class="@($"{GetResponsivePadding()} mx-auto")" Style="max-width: 700px;">
+                        <MudImage Src="logo_512x512.png" Alt="Syki" Elevation="25" Class="rounded-lg mx-20 mt-10 mb-5" />
+                        <MudCardContent Class="@GetResponsivePadding()">-->
+                            <MudText Typo="Typo.h4" Align="Align.Start" Class="mb-1">
+                                <MudIcon Icon="@Icons.Material.Filled.Insights" Class="mr-1 mb-n1" Size="Size.Large" />
+                                Criar uma conta
+                            </MudText>
+                            <MudText Typo="Typo.subtitle2" Align="Align.Start" Color="Color.Secondary" Class="mb-4">
                                 Informe seu e-mail abaixo para criar sua conta
                             </MudText>
                             <FluentValidationValidator @ref="_fluentValidationValidator" />
@@ -31,21 +32,32 @@
                                           Variant="Variant.Text"
                                           Required="true"
                                           RequiredError="Informe!"
-                                          For="@(() => _registerUserModel.Email)" />
-                            <MudStack Spacing="1" Class="mt-10">
+                                          For="@(() => _registerUserModel.Email)"
+                                        Disabled="@loading" />
+                            <MudStack Spacing="1" Class="mt-3">
                                 <MudButton Size="Size.Large"
                                            OnClick="@DoRegisterAsync"
                                            Variant="Variant.Filled"
                                            Color="Color.Primary"
-                                           Class="pa-3">
-                                    Avançar
+                                           Class="pa-3"
+                                            Disabled="@loading">
+                                            @if (loading)
+                                            {
+                                                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+                                                <MudText Class="ms-2">Processando...</MudText>
+                                            }
+                                            else
+                                            {
+                                                <MudText>Avançar</MudText>
+                                            }
                                 </MudButton>
                             </MudStack>
-                            <MudStack Spacing="1" Class="mt-10" AlignItems="AlignItems.Start">
-                                <MudLink Color="Color.Info" Underline="Underline.None" Href="/login">Já tem conta?</MudLink>
+                            <MudStack Spacing="1" Class="mt-3" AlignItems="AlignItems.Start">
+                        <MudLink Color="Color.Info" Underline="Underline.None" Disabled="@loading" Href="/login">Já tem conta?</MudLink>
                             </MudStack>
-                    </MudCardContent>
-                </MudCard>
+                    <!--</MudCardContent>
+                </MudCard>-->
+                </MudStack>
             </EditForm>
         </NotAuthorized>
     </AuthorizeView>
