--- a/Pages/Criacao/Criacao.razor
+++ b/Pages/Criacao/Criacao.razor
@@ -1,5 +1,7 @@
 ﻿@page "/system/create"
 @using modulum.Shared.Enum
+@inject ISnackbar _snackBar
+@using MudBlazor
 
 <MudContainer Class="my-4 px-4">
     <MudText Typo="Typo.h4" Style="font-weight: bold" Class="ml-4">
