--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,6 +11,7 @@
 @using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Identity;
 @using MudBlazor
+@using MudExtensions
 @using Blazored.LocalStorage;
 @using Blazored.FluentValidation
 
