--- a/Pages/Criacao/Criacao.razor
+++ b/Pages/Criacao/Criacao.razor
@@ -1,128 +1,201 @@
-﻿@page "/system/create"
+﻿@page "/system/{Operation}/{TableId:int?}"
 @using modulum.Shared.Enum
 @inject ISnackbar _snackBar
 @using MudBlazor
 
 <MudContainer Class="my-4 px-4">
-    <MudText Typo="Typo.h4" Style="font-weight: bold" Class="ml-4">
-        <MudIcon Icon="@Icons.Material.Filled.Insights" Class="mr-1 mb-n1" Size="Size.Large" />
-        Criação
-    </MudText>
-    <MudAlert Class="mt-4" Severity="Severity.Normal" NoIcon="true" Variant="Variant.Text" Elevation="0">
-        <MudStack Row="true" Justify="Justify.SpaceAround">
-            <MudText>Aqui você pode criar seu sistema unico e personalizado diferente de tudo no mercado</MudText>
-        </MudStack>
-    </MudAlert>
-    <EditForm Model="@_modelDynamic.tableRequest" method="post" FormName="Bem vindo ao Modulum =)" OnValidSubmit="@DoSalvarAsync">
-        <MudGrid Class="pt-4">
-                <FluentValidationValidator @ref="_fluentValidationValidator"  />
-                <FormValidator @ref="_criacaoFormValidator"></FormValidator>
-             <MudItem xs="12" md="12">
-                <MudPaper Class="pa-4" Elevation="0" Outlined="true">
-                    <MudTextField 
-                        Label="Título do Sistema" 
-                        For="@(() => _modelDynamic.tableRequest.NomeTela)" 
-                        @bind-Value="_modelDynamic.tableRequest.NomeTela" 
-                        Variant="Variant.Text" 
-                        Class="mb-1 mud-width-full"
-                        Required="true"
-                        Disabled="@_loading" />
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="12" md="4">
-                <MudPaper Class="pa-4" Elevation="0" Outlined="true">
-                    <MudText Typo="Typo.h6">Adicionar Campo</MudText>
-                    <MudTextField InputType="InputType.Text"
-                                  Margin="Margin.Normal"
-                                  Label="Nome do Campo"
-                                  Class="mb-3"
-                                  @bind-Value="@_modelDynamic.fieldRequest.NomeCampoTela"
-                                  Variant="Variant.Text"
-                                  Required="true"
-                                  RequiredError="Informe!"
-                                  For="@(() => _modelDynamic.fieldRequest.NomeCampoTela)" />
+    @if (_loadingDados)
+    {
+        <MudAlert Severity="Severity.Warning" ContentAlignment="HorizontalAlignment.Start" Dense="false" Class="p-3">Carregando...</MudAlert>
+        <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
+    }
+    else
+    {
 
-                   
-                    <MudSelect T="TypeColumnEnum?"
-                               Label="Tipo do Campo"
-                               @bind-Value="@_modelDynamic.fieldRequest.Tipo"
-                               Variant="Variant.Text"
-                               Class="mb-3"
-                               Required="true"
-                               For="@(() => _modelDynamic.fieldRequest.Tipo)"
-                               OnBlur="@OnTipoChanged"
-                               Disabled="@_loading">
-                        @foreach (TypeColumnEnum? value in Enum.GetValues(typeof(TypeColumnEnum)))
-                        {
-                            <MudSelectItem T="TypeColumnEnum?" Value="@value">@GetDisplayText(value)</MudSelectItem>
-                        }
-                    </MudSelect>
+        <EditForm Model="@_modelDynamic.tableRequest" method="post" FormName="Bem vindo ao Modulum =)" OnValidSubmit="@DoSalvarAsync">
 
-                    <MudTextField 
-                        @bind-Value="_modelDynamic.fieldRequest.Tamanho" 
-                        For="@(() => _modelDynamic.fieldRequest.Tamanho)" 
-                        Label="Tamanho" 
-                        Variant="Variant.Text" 
-                        InputType="InputType.Number" 
-                        Class="mb-3" T="int?"
-                                  Disabled="@((_modelDynamic.fieldRequest.Tipo != TypeColumnEnum.VARCHAR) | _loading )" />
-                    <MudCheckBox T="bool" Label="Campo Obrigatório" Class="mb-3" @bind-Value="_modelDynamic.fieldRequest.IsObrigatorio" />
-                    <MudButton Color="Color.Primary" OnClick="@AdicionarCampo" Variant="Variant.Text" Disabled="@_loading">Adicionar</MudButton>
-                </MudPaper>
-            </MudItem>
-
-            <!-- Lista de campos adicionados -->
-            <MudItem xs="12" md="8">
-                <MudPaper Class="pa-4" Elevation="0" Outlined="true">
-                    <MudText Typo="Typo.h6">Campos Adicionados</MudText>
-
-                    <MudList Class="mt-2" T="string">
-                        @foreach (var campo in _modelDynamic.tableRequest.Campos)
-                        {
-                            <MudListItem>
-                                <MudGrid>
-                                    <MudItem xs="9">
-                                        <MudText>@campo.NomeCampoTela (@GetDisplayText(campo.Tipo)) @(campo.IsPrimaryKey ? "(Identificador)" : null) @(campo.IsObrigatorio ? "(Obrigatório)" : null)</MudText>
-                                    </MudItem>
-                                    <MudItem xs="3" Class="text-end">
-                                        <MudIconButton Icon="@Icons.Material.Filled.Delete"
-                                                       Color="Color.Error"
-                                                       Size="Size.Small"
-                                                       Disabled="@(campo.IsPrimaryKey | _loading)"
-                                                       OnClick="@(() => RemoverCampo(campo))" />
-                                    </MudItem>
-                                </MudGrid>
-                            </MudListItem>
-                        }
-                    </MudList>
-                </MudPaper>
-            </MudItem>
-        </MudGrid>
-        <MudGrid Class="pt-4 mt-4" Spacing="0">
-            <MudItem xs="12">
-                <MudStack Justify="Justify.FlexEnd">
-                    <MudButton 
-                            Class="px-8"
-                            StartIcon="@(_loading ? "" : Icons.Material.Filled.SaveAlt)"
-                            IconSize="Size.Large"
-                            Variant="Variant.Filled"
-                            Style="height: 60px;"
-                            Color="Color.Primary"
-                            Href=""
-                            OnClick="@DoSalvarAsync" 
-                            Disabled="@_loading">
-                            @if (_loading)
+            <MudCard Elevation="0" Class="">
+                <MudCardContent>
+                    <MudGrid>
+                        <MudItem xs="12" sm="8" md="8" lg="8">
+                            <MudStack Row="true" AlignItems="AlignItems.Center">
+                                <MudIcon Icon="@Icons.Material.Filled.Insights" Class="mb-1" Size="Size.Large" />
+                                <MudText Typo="Typo.h5" Style="font-weight: bold">Criação</MudText>
+                            </MudStack>
+                        </MudItem>
+                        <MudItem xs="12" sm="4" md="4" lg="4" Class="d-flex justify-end">
+                            @if (!Operation.Equals("select"))
                             {
-                                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
-                                <MudText Class="ms-2">Criando...</MudText>
+                                <MudButton StartIcon="@Icons.Material.Filled.Add"
+                                IconSize="Size.Large"
+                                Variant="Variant.Filled"
+                                Size="Size.Medium"
+                                Color="Color.Primary"
+                                @onclick="@DoSalvarAsync"
+                                Class="mr-2"
+                                Disabled="@(_loading || IsView)">
+                                    @if (_loading)
+                                    {
+                                        <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+                                        <MudText Class="ms-2">@(Operation.Equals("create") ? "Criando..." : "Alterando...")</MudText>
+                                    }
+                                    else
+                                    {
+                                        <MudText>@(Operation.Equals("create") ? "Criar" : "Alterar")</MudText>
+                                    }
+                                </MudButton>
                             }
-                            else
-                            {
-                                <MudText>Criar</MudText>
-                            }
-                    </MudButton>
+                        </MudItem>
+
+                    </MudGrid>
+                </MudCardContent>
+            </MudCard>
+
+            <MudAlert Class="mt-4" Severity="Severity.Normal" NoIcon="true" Variant="Variant.Text" Elevation="0">
+                <MudStack Row="true" Justify="Justify.SpaceAround">
+                    <MudText>Aqui você pode criar seu sistema unico e personalizado diferente de tudo no mercado</MudText>
                 </MudStack>
-            </MudItem>
-        </MudGrid>
+            </MudAlert>
+
+            <MudPaper Class="mt-4 p-4" Elevation="0" Outlined="true">
+                <MudGrid Class="pt-4">
+                    <FluentValidationValidator @ref="_fluentValidationValidator"  />
+                    <FormValidator @ref="_criacaoFormValidator"></FormValidator>
+                    @if (Operation.Equals("select"))
+                    {
+                        <MudItem xs="12" md="12">
+                            <MudStack Class="pa-4">
+                                <MudText Typo="Typo.h6">Tela:</MudText>
+                                    <MudList T="string">
+                                        <MudListItem>
+                                        <MudText>@_modelDynamic.tableRequest.NomeTela</MudText>
+                                    </MudListItem>
+                                    </MudList>
+                            </MudStack>
+                        </MudItem>
+                    }
+                    
+
+                    @if (!Operation.Equals("select"))
+                    {
+                        <MudItem xs="12" md="12">
+                            <MudStack Class="pa-4">
+                                <MudTextField Label="Título da Tela"
+                                              For="@(() => _modelDynamic.tableRequest.NomeTela)"
+                                              @bind-Value="_modelDynamic.tableRequest.NomeTela"
+                                              Variant="Variant.Text"
+                                              Class="mb-1 mud-width-full"
+                                              Required="true"
+                                              Disabled="@(_loading || IsView)" />
+                            </MudStack>
+                        </MudItem>
+                        <MudItem xs="12" md="4">
+                            <MudStack Class="pa-4" >
+                                <MudText Typo="Typo.h6">Adicionar Campo</MudText>
+                                <MudTextField InputType="InputType.Text"
+                                Margin="Margin.Normal"
+                                Label="Nome do Campo"
+                                Class="mb-3"
+                                @bind-Value="@_modelDynamic.fieldRequest.NomeCampoTela"
+                                Variant="Variant.Text"
+                                Required="true"
+                                RequiredError="Informe!"
+                                For="@(() => _modelDynamic.fieldRequest.NomeCampoTela)"
+                                Disabled="@IsView" />
+
+
+                                <MudSelect T="TypeColumnEnum?"
+                                Label="Tipo do Campo"
+                                @bind-Value="@_modelDynamic.fieldRequest.Tipo"
+                                Variant="Variant.Text"
+                                Class="mb-3"
+                                Required="true"
+                                For="@(() => _modelDynamic.fieldRequest.Tipo)"
+                                OnBlur="@OnTipoChanged"
+                                Disabled="@(_loading || IsView || _modelDynamic.fieldRequest.Id is not null)">
+                                    @foreach (TypeColumnEnum? value in Enum.GetValues(typeof(TypeColumnEnum)))
+                                    {
+                                        <MudSelectItem T="TypeColumnEnum?" Value="@value">@GetDisplayText(value)</MudSelectItem>
+                                    }
+                                </MudSelect>
+
+                                <MudTextField 
+                                @bind-Value="_modelDynamic.fieldRequest.Tamanho" 
+                                For="@(() => _modelDynamic.fieldRequest.Tamanho)" 
+                                Label="Tamanho" 
+                                Variant="Variant.Text" 
+                                InputType="InputType.Number" 
+                                Class="mb-3" T="int?"
+                                Disabled="@((_modelDynamic.fieldRequest.Tipo != TypeColumnEnum.VARCHAR) | _loading | IsView || _modelDynamic.fieldRequest.Id is not null)" />
+                                <MudCheckBox T="bool" Label="Campo Obrigatório" Class="mb-3" @bind-Value="_modelDynamic.fieldRequest.IsObrigatorio" Disabled="@(IsView || _modelDynamic.fieldRequest.Id is not null)" />
+                                <MudButton StartIcon="@Icons.Material.Filled.Add" Color="Color.Secondary" OnClick="@AdicionarCampo" Variant="Variant.Filled" Disabled="@(_loading || IsView)">@(_modelDynamic.fieldRequest.TempId is not null ? "Alterar" : "Adicionar")</MudButton>
+                            </MudStack>
+                        </MudItem>
+                    }
+                    <!-- Lista de campos adicionados -->
+                    <MudItem xs="12" md="@(!Operation.Equals("select") ? 8 : 12)">
+                        <MudStack Class="pa-4">
+                            <MudText Typo="Typo.h6">Campos @(!Operation.Equals("select") ? "Adicionados" : ":") </MudText>
+
+                            <MudList Class="mt-2" T="string">
+                                @foreach (var campo in _modelDynamic.tableRequest.Campos)
+                                {
+                                    <MudListItem>
+                                        <MudGrid>
+                                            <MudItem xs="8">
+                                                <MudText>@campo.NomeCampoTela (@GetDisplayText(campo.Tipo)) @(campo.IsPrimaryKey ? "(Identificador)" : null) @(campo.IsObrigatorio ? "(Obrigatório)" : null)</MudText>
+                                            </MudItem>
+                                            @if (!Operation.Equals("select"))
+                                            {
+                                                <MudItem xs="2" Class="text-end">
+                                                    <MudIconButton Icon="@Icons.Material.Filled.Edit"
+                                                           Color="Color.Warning"
+                                                           Size="Size.Small"
+                                                           Disabled="@(campo.IsPrimaryKey | _loading | IsView)"
+                                                           OnClick="@(() => EditarCampo(campo))" />
+                                                </MudItem>
+                                                <MudItem xs="2" Class="text-end">
+                                                    <MudIconButton Icon="@Icons.Material.Filled.Delete"
+                                                           Color="Color.Error"
+                                                           Size="Size.Small"
+                                                           Disabled="@(campo.IsPrimaryKey | _loading | IsView)"
+                                                           OnClick="@(() => RemoverCampo(campo))" />
+                                                </MudItem>
+                                            }
+                                        </MudGrid>
+                                </MudListItem>
+                            }
+                        </MudList>
+                    </MudStack>
+                </MudItem>
+            </MudGrid>
+            <!--<MudGrid Class="pt-4 mt-4" Spacing="0">
+                <MudItem xs="12">
+                    <MudStack Justify="Justify.FlexEnd">
+                        <MudButton 
+                                Class="px-8"
+                                StartIcon="@(_loading ? "" : Icons.Material.Filled.SaveAlt)"
+                                IconSize="Size.Large"
+                                Variant="Variant.Filled"
+                                Style="height: 60px;"
+                                Color="Color.Primary"
+                                Href=""
+                                OnClick="@DoSalvarAsync"
+                                Disabled="@(_loading || IsView)">-->
+                                @*@if (_loading)
+                                {
+                                    <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+                                    <MudText Class="ms-2">Criando...</MudText>
+                                }
+                                else
+                                {
+                                    <MudText>Criar</MudText>
+                                }*@
+                <!--</MudButton>
+                    </MudStack>
+                </MudItem>
+                </MudGrid>-->
+        </MudPaper>
     </EditForm>
+    }
 </MudContainer>
